# dt-rag

./: .coveragerc  .dockerignore  .env.development  .env.docker  .env.example  .env.local.example  .env.production.template  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .railway-login-guide.md  .railway-token-setup.sh  .railwayignore  2025-10-02 중간보고서.md  2025-11-16-moai-adk.txt  =0.3.6  =1.13.0  =3.6.0  ABSTAIN.md  ACCURATE_VERIFICATION_REPORT.md  AGENTS.md  AGENT_FACTORY_PRD_GAP_ANALYSIS.md  AGENT_SYSTEM_SUMMARY.md  API_DOCUMENTATION_EVALUATION_REPORT.md  API_FIXES_SUMMARY.md  AVATAR_FEATURE_QUICK_START.md  AgentFactory_Plan_v1.0.md  AgentGrowthPlatform_Draft_v1.0.md  BATCH3_COMPLETION_REPORT.md  BATCH4_CP2_VERIFICATION.md  BATCH4_CP3_REPORT.md  BATCH5_COMPLETION_REPORT.md  BATCH5_CP1_REPORT.md  BATCH5_CP2_REPORT.md  BATCH6_CP2_COMPLETION_REPORT.md  BRANCH_PROTECTION_SETUP.md  CHANGELOG.md  CI_CD_WORKFLOW_GUIDE.md  CI_GOVERNANCE_SETUP_REPORT.md  (+378 more)
.claude/: project-context.md  settings.json  settings.local.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.moai/: config.json
.mypy_cache/: missing_stubs
VibeCodingBibleKit_temp/: README.md  vibe.config.yaml
alembic/: env.py  env.py.backup
apps/: __init__.py
checklists/: A팀_완전_작업_가이드.md  prd_dynamic_taxonomy_rag_v_1_8 최종.md  최종 업무분배.md
docs/: DESIGN-COMPLIANCE-REPORT.md  FRONTEND-MENU-REORGANIZATION-PLAN.md  REFACTORING-PLAN.md  backend-architecture-frontend-ui-proposal.md  frontend-design-master-plan.md  openapi.yaml  troubleshooting.md
examples/: hybrid_search_demo.py
frontend/: .env.production  .env.vercel.production  README.md  package-lock.json  package.json  pnpm-lock.yaml  test-arrow-nav.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
golden_datasets/: golden_dataset_20251001_175615.json  golden_dataset_20251001_175832.json  golden_dataset_20251001_175908.json  golden_dataset_20251001_175924.json  golden_dataset_20251003_165148.json  golden_dataset_combined_20251003_165420.json
knowledge-base/: GEMINI_INTEGRATION_PROOF.json  PROJECT_PROOF_REPORT.json  agent-factory-builder_knowledge.json  api-designer_knowledge.json  classification-pipeline-expert_knowledge.json  database-architect_knowledge.json  document-ingestion-specialist_knowledge.json  gemini-assistant_knowledge.json  hybrid-search-specialist_knowledge.json  knowledge_collection_summary.json  langgraph-orchestrator_knowledge.json  observability-engineer_knowledge.json  rag-evaluation-specialist_knowledge.json  security-compliance-auditor_knowledge.json  security-compliance-auditor_knowledge_backup.json  taxonomy-architect_knowledge.json  tree-ui-developer_knowledge.json
migrations/: .ci-trigger.txt  0001_initial_schema.sql  0002_span_range_and_indexes.sql  0003_5_case_bank_table.sql  0003_audit_hitl_ivfflat_and_rollback_proc.sql  0004_ingestion_pipeline_tables.sql  0004_reflection_and_consolidation.sql
monitoring/: prometheus.yml
new-automation-proposal/: first draft.md  sample2.xlsx  입고 및 재고 현황표 10.01.xlsx  해동기획 자동화 프로젝트.pptx
sample_docs/: rag_overview.txt  taxonomy_guide.txt  vector_embeddings.txt
scripts/: analyze_branch_uniqueness.py  analyze_large_branches.py  analyze_remaining_branches.py  backup.sh  cleanup-system.sh  deploy.sh  fix_mypy_auto.py  fix_mypy_v2.py  generate-clients.md  health-check.sh  install-git-hooks.sh  migrate_config.py  security_scan.sh  seed_data.sql  setup-auto-cleanup.sh  smoke.sh  test-with-postgres.sh  validate_config.py  validate_cors_security.py  validate_tags.py  verify_llm_costs.py
security_reports/: bandit_report.txt
(+16441 files in other folders)
